fix deprecated method calls